--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>About | Urja Zaveri</title>
+<title>About Me | Urja Zaveri</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="style.css">
 </head>
@@ -25,29 +25,18 @@
 <section>
 
 <h1>About Me</h1>
-<p>
-I am currently a PhD candidate in the Experimental Planetology Group led by Prof. Paolo Sossi.
-</p>
+<p>I am currently a PhD candidate in the Experimental Planetology Group led by Prof. Paolo Sossi.</p>
 
-<p>
-I am originally from Mumbai, India, where I completed my BSc in Geology at St. Xavier’s College.
-I later pursued an MSc in Earth Structure and Dynamics at Utrecht University in the Netherlands.
-During my master’s studies, I was involved in establishing the Utrecht Meteorite Lab, where I worked
-on digitizing the meteorite collection using 3D photogrammetry.
-</p>
+<p>I am originally from Mumbai, India, where I completed my BSc in Geology at St. Xavier’s College. I later pursued an MSc in Earth Structure and Dynamics at Utrecht University in the Netherlands. During my master’s studies, I was involved in establishing the Utrecht Meteorite Lab, where I worked on digitizing the meteorite collection of Utrecht University using 3D photogrammetry.</p>
 
-<p>
-This experience sparked my interest in meteorites and planet formation more broadly.
-Currently, my work focuses on exploring rocky exoplanet interiors through thermodynamic modeling
-of protoplanetary disks, combined with high-pressure and high-temperature experimental techniques.
-</p>
+<p>This experience sparked my interest in meteorites and planet formation more broadly. Currently, my work focuses on exploring rocky exoplanet interiors through thermodynamic modeling of protoplanetary disks, combined with high-pressure and high-temperature experimental techniques.</p>
 
 <h2>Awards & Grants</h2>
 <ul>
-  <li>2025 — Outreach grants from the Swiss Space Office / SSAA and Europlanet for Astronomy on Tap Zurich</li>
-  <li>2023 — Olaf Schuiling Fund, Utrecht University</li>
-  <li>2022 — Community Favourite Video, MinSoc UK Science Outreach Competition</li>
-  <li>2022 — Ms. Bhaktawar Sam Sethna Scholarship, St. Xavier’s College, Mumbai</li>
+<li>2025 — Awarded outreach grants by the Swiss Space Office / SSAA and Europlanet to support Astronomy on Tap Zurich outreach events.</li>
+<li>2023 — Awarded the Olaf Schuiling Fund from Utrecht University to support my guided research project.</li>
+<li>2022 — Awarded Community Favourite Video at the Science Outreach Video Competition, organized by the Environmental Mineralogy Group (MinSoc UK), for a video on perovskites.</li>
+<li>2022 — Awarded the Ms. Bhaktawar Sam Sethna Scholarship for the female student obtaining the highest marks in Geology, St. Xavier’s College, Mumbai.</li>
 </ul>
 
 </section>
