--- a/contact.html
+++ b/contact.html
@@ -25,13 +25,11 @@
 <section>
 
 <h1>Contact</h1>
-<p>
-Whether you’d like to say hello, exchange ideas, or discuss research or outreach,
-feel free to get in touch.
-</p>
+<p>Whether you’d like to say hello, exchange ideas, discuss research or outreach, or have any other questions, feel free to get in touch.</p>
+
+<p>You can reach me via email at:</p>
 
 <p>
-<strong>Email:</strong><br>
 urja.zaveri@eaps.ethz.ch<br>
 urja.zaveri16@gmail.com
 </p>
