--- a/index.html
+++ b/index.html
@@ -27,17 +27,9 @@
 <h1>Welcome</h1>
 <p>Welcome to my website. I’m Urja Zaveri, a PhD candidate at ETH Zurich.</p>
 
-<p>
-My research focuses on how planets form, what they are made of, and how their interiors evolve.
-I am particularly interested in rocky exoplanets and planetary systems that form under reducing
-chemical conditions.
-</p>
+<p>My research focuses on how planets form, what they are made of, and how their interiors evolve. I am particularly interested in rocky exoplanets and planetary systems that form under reducing chemical conditions.</p>
 
-<p>
-Alongside research, I am passionate about science outreach and public engagement.
-I enjoy translating complex scientific ideas into accessible stories and creating spaces
-where science feels curious, welcoming, and fun.
-</p>
+<p>Alongside research, I am passionate about science outreach and public engagement. I enjoy translating complex scientific ideas into accessible stories and creating spaces where science feels curious, welcoming, and fun.</p>
 
 </section>
 </main>
