--- a/outreach.html
+++ b/outreach.html
@@ -25,24 +25,22 @@
 <section>
 
 <h1>Outreach</h1>
-<p>
-I am actively engaged in science outreach and communication, with a focus on making planetary
-science accessible to non-specialist audiences.
-</p>
+<p>I am actively engaged in science outreach and communication, with a focus on making planetary science accessible to non-specialist audiences. Alongside my core interest in space science, I enjoy engaging with adjacent topics such as gemmology and environmental science, as well as broader themes in general science.</p>
 
 <h2>Selected Outreach Activities</h2>
-<ul>
-  <li><strong>Co-founder, Astronomy on Tap Zurich</strong> — Public science events bringing researchers and the public together.</li>
-  <li><strong>Invited outreach talk</strong> — Department of Geology, St. Xavier’s College, Mumbai.</li>
-  <li><strong>Fantasy Basel – Swiss Comic Con</strong> — Outreach activities at the NCCR PlanetS Space Pavilion.</li>
-</ul>
+<p><strong>Co-founder, Astronomy on Tap Zurich</strong><br>
+I am a co-founder of Astronomy on Tap Zurich, a public outreach event series that brings scientists and the general public together in informal settings.</p>
+
+<p><strong>Invited outreach talk, St. Xavier’s College, Mumbai</strong><br>
+I delivered an invited talk aimed at promoting exoplanet science to undergraduate students at the Department of Geology, St. Xavier’s College, Mumbai.</p>
+
+<p><strong>Fantasy Basel – Swiss Comic Con</strong><br>
+I participated in public outreach activities at Fantasy Basel, supporting the Space Pavilion at the NCCR PlanetS stand.</p>
 
 <h2>Selected Write-ups</h2>
-<ul>
-  <li><a href="https://medium.com/@urja-zaveri16" target="_blank">Medium blog</a></li>
-  <li>Energy Futures — Cover story on carbon emissions (TERI)</li>
-  <li><a href="https://www.ecosprinter.eu/articles/blog/a-case-for-perovskites" target="_blank">A Case for Perovskite Solar Cells</a></li>
-</ul>
+<p>Medium blog: https://medium.com/@urja-zaveri16</p>
+<p>Cover story: The Race to Reduce Carbon Emissions, co-authored with Anshuman Gupta, featured in Energy Futures, Vol. 11 (Issues 1 & 2), published by TERI – The Energy and Resources Institute.</p>
+<p>Article: A Case for Perovskite Solar Cells, published in Ecosprinter: https://www.ecosprinter.eu/articles/blog/a-case-for-perovskites</p>
 
 </section>
 </main>
