--- a/research.html
+++ b/research.html
@@ -25,34 +25,28 @@
 <section>
 
 <h1>Research</h1>
-<p>
-My research spans multiple stages of planetary evolution, from the formation of solids
-in protoplanetary disks and the study of meteorites as records of early Solar System processes,
-to decoding the interior structure of rocky planets within and beyond the Solar System.
-</p>
+<p>My research spans multiple stages of planetary evolution, from the formation of solids in protoplanetary disks and the study of meteorites as records of early Solar System processes, to decoding the interior structure of rocky planets within and beyond the Solar System.</p>
 
-<p>
-A central theme of my work is understanding how elements partition between different planetary
-reservoirs under varying chemical and physical conditions.
-</p>
+<p>A central theme of my work is understanding how elements partition between different planetary reservoirs under varying chemical and physical conditions.</p>
 
-<p>
-I approach these questions by combining thermodynamic modeling,
-high-pressure–high-temperature experiments, and geophysical modeling.
-</p>
+<p>I approach these questions by combining thermodynamic modeling, high-pressure–high-temperature experiments, and geophysical modeling.</p>
 
 <h2>Ongoing Projects</h2>
-<ul>
-  <li><strong>Protoplanetary disk chemistry and planet accretion</strong> — Modeling disk chemistry with high C/O ratios and simulating planet accretion.</li>
-  <li><strong>High-pressure–high-temperature experiments</strong> — Piston-cylinder experiments in low oxygen fugacity systems.</li>
-  <li><strong>Interior structure of Mercury</strong> — Coupling experimental partitioning laws with geophysical modeling.</li>
-</ul>
+<p><strong>Protoplanetary disk chemistry and planet accretion</strong><br>
+I model the chemistry of protoplanetary disks with high C/O ratios using Gibbs free energy minimization, and simulate planet accretion in these environments. This work aims to establish the star–planet connection for refractory and volatile elements across chemically diverse planetary systems.</p>
+
+<p><strong>High-pressure–high-temperature experiments</strong><br>
+I conduct piston-cylinder experiments to investigate phase stability in low oxygen fugacity systems, with a focus on volatile element partitioning between metal and silicate liquids.</p>
+
+<p><strong>Interior structure of Mercury</strong><br>
+I probe the interior of planet Mercury by coupling experimentally constrained element partitioning laws with geophysical modeling, with the goal of better understanding its internal structure and differentiation history.</p>
 
 <h2>Past Projects</h2>
-<ul>
-  <li>Ordinary chondrites and parent-body processes</li>
-  <li>Iron nanoparticles in hydrothermal systems</li>
-</ul>
+<p><strong>Ordinary chondrites and parent-body processes</strong><br>
+I studied the petrology and shock-related microtextures of the ordinary chondrite Utrecht to reconstruct the thermal and impact history of its parent body.</p>
+
+<p><strong>Iron nanoparticles in hydrothermal systems</strong><br>
+I investigated iron nanoparticles from the Rainbow hydrothermal vent field to assess their long-term stability, as well as their role in the deep-ocean iron cycle and elemental transport.</p>
 
 </section>
 </main>
