--- a/about.html
+++ b/about.html
@@ -30,6 +30,7 @@
 <p>I am originally from Mumbai, India, where I completed my BSc in Geology at St. Xavier’s College. I later pursued an MSc in Earth Structure and Dynamics at Utrecht University in the Netherlands. During my master’s studies, I was involved in establishing the Utrecht Meteorite Lab, where I worked on digitizing the meteorite collection of Utrecht University using 3D photogrammetry.</p>
 
 <p>This experience sparked my interest in meteorites and planet formation more broadly. Currently, my work focuses on exploring rocky exoplanet interiors through thermodynamic modeling of protoplanetary disks, combined with high-pressure and high-temperature experimental techniques.</p>
+<p>When I’m not experimenting in the lab, I’m usually experimenting in my kitchen, spending time at the gym, dancing, or wandering through an art museum. </p>  
 
 <h2>Awards & Grants</h2>
 <ul>
