--- a/research.html
+++ b/research.html
@@ -48,6 +48,14 @@ I studied the petrology and shock-related microtextures of the ordinary chondrit
 <p><strong>Iron nanoparticles in hydrothermal systems</strong><br>
 I investigated iron nanoparticles from the Rainbow hydrothermal vent field to assess their long-term stability, as well as their role in the deep-ocean iron cycle and elemental transport.</p>
 
+<h2>Awards & Grants</h2>
+<ul>
+<li>2025 — Awarded outreach grants by the Swiss Space Office / SSAA and Europlanet to support Astronomy on Tap Zurich outreach events.</li>
+<li>2023 — Awarded the Olaf Schuiling Fund from Utrecht University to support my guided research project.</li>
+<li>2022 — Awarded Community Favourite Video at the Science Outreach Video Competition, organized by the Environmental Mineralogy Group (MinSoc UK), for a video on perovskites.</li>
+<li>2022 — Awarded the Ms. Bhaktawar Sam Sethna Scholarship for the female student obtaining the highest marks in Geology, St. Xavier’s College, Mumbai.</li>
+</ul>
+
 </section>
 </main>
 <footer>© Urja Zaveri</footer>
