--- a/outreach.html
+++ b/outreach.html
@@ -38,9 +38,13 @@ I delivered an invited talk aimed at promoting exoplanet science to undergraduat
 I participated in public outreach activities at Fantasy Basel, supporting the Space Pavilion at the NCCR PlanetS stand.</p>
 
 <h2>Selected Write-ups</h2>
-<p>Medium blog: https://medium.com/@urja-zaveri16</p>
-<p>Cover story: The Race to Reduce Carbon Emissions, co-authored with Anshuman Gupta, featured in Energy Futures, Vol. 11 (Issues 1 & 2), published by TERI – The Energy and Resources Institute.</p>
-<p>Article: A Case for Perovskite Solar Cells, published in Ecosprinter: https://www.ecosprinter.eu/articles/blog/a-case-for-perovskites</p>
+<p>
+  <a href="https://medium.com/@urja-zaveri16" target="_blank" rel="noopener noreferrer">
+    Medium Blog
+  </a>
+</p>
+<p><a href="https://bookstore.teri.res.in/docs/magazines/Pages%20from_1_40__EF_Oct-Mar%202023.pdf">Cover story: The Race to Reduce Carbon Emissions, co-authored with Anshuman Gupta, featured in Energy Futures, Vol. 11 (Issues 1 & 2), published by TERI – The Energy and Resources Institute.</a></p>
+<p><a href="https://www.ecosprinter.eu/articles/blog/a-case-for-perovskites"> Feature Article: A Case for Perovskite Solar Cells, published in Ecosprinter. </a></p>
 
 </section>
 </main>
