--- a/research.html
+++ b/research.html
@@ -41,12 +41,20 @@ I conduct piston-cylinder experiments to investigate phase stability in low oxyg
 <p><strong>Interior structure of Mercury</strong><br>
 I probe the interior of planet Mercury by coupling experimentally constrained element partitioning laws with geophysical modeling, with the goal of better understanding its internal structure and differentiation history.</p>
 
+
 <h2>Past Projects</h2>
 <p><strong>Ordinary chondrites and parent-body processes</strong><br>
-I studied the petrology and shock-related microtextures of the ordinary chondrite Utrecht to reconstruct the thermal and impact history of its parent body.</p>
+I studied the petrology and shock-related microtextures of the meteorite 'Utrecht L6 chondrite' to reconstruct the thermal and shock history of its parent body using analytical techniques such as RAMAN spectroscopy and Electron microprobe work. <br>
+Collaborators: Prof. Inge Loes ten Kate and Prof. Eric Hellebrand</p>
 
 <p><strong>Iron nanoparticles in hydrothermal systems</strong><br>
-I investigated iron nanoparticles from the Rainbow hydrothermal vent field to assess their long-term stability, as well as their role in the deep-ocean iron cycle and elemental transport.</p>
+I investigated iron nanoparticles from the Rainbow hydrothermal vent field to evaluate their long-term stability and their role in the deep-ocean iron cycle and elemental transport. This work involved artificially aging collected nanoparticles in seawater under controlled laboratory conditions, followed by detailed analysis of aliquots using a range of analytical techniques. <br>
+Collaborators: Prof. Oliver Plümper, Dr. Martina Preiner, and Dr. Peter Kraal</p>
+
+<p><strong>Utrecht Meteorite Lab</strong>
+In my role as a Bright Minds Fellow at Utrecht University, I was responsible for digitizing the meteorite collection housed there using 3D photogrammetry techniques. The aim was to make the collection accessible to the public and to enable educators to teach using digital models. The models are available on the <a href="https://sketchfab.com/UtrechtMeteoriteLab" target="_blank" rel="noopener noreferrer"> Sketchfab page <br>
+Collaborators: Prof. Inge Loes ten Kate and Dr. Sebastiaan de Vet</a> 
+</p>
 
 <h2>Awards & Grants</h2>
 <ul>
