--- a/research.html
+++ b/research.html
@@ -52,8 +52,8 @@ I investigated iron nanoparticles from the Rainbow hydrothermal vent field to ev
 Collaborators: Prof. Oliver Plümper, Dr. Martina Preiner, and Dr. Peter Kraal</p>
 
 <p><strong>Utrecht Meteorite Lab</strong>
-In my role as a Bright Minds Fellow at Utrecht University, I was responsible for digitizing the meteorite collection housed there using 3D photogrammetry techniques. The aim was to make the collection accessible to the public and to enable educators to teach using digital models. The models are available on the <a href="https://sketchfab.com/UtrechtMeteoriteLab" target="_blank" rel="noopener noreferrer"> Sketchfab page <br>
-Collaborators: Prof. Inge Loes ten Kate and Dr. Sebastiaan de Vet</a> 
+In my role as a Bright Minds Fellow at Utrecht University, I was responsible for digitizing the meteorite collection housed there using 3D photogrammetry techniques. The aim was to make the collection accessible to the public and to enable educators to teach using digital models. The models are available on the <a href="https://sketchfab.com/UtrechtMeteoriteLab" target="_blank" rel="noopener noreferrer"> Sketchfab page</a><br> 
+  Collaborators: Prof. Inge Loes ten Kate and Dr. Sebastiaan de Vet
 </p>
 
 <h2>Awards & Grants</h2>
