--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="nav-logo">Urja Zaveri</div>
     <ul class="nav-links">
       <li><a href="index.html">Home</a></li>
-      <li><a href="about.html">About</a></li>
+      <li><a href="about.html">About Me</a></li>
       <li><a href="research.html">Research</a></li>
       <li><a href="outreach.html">Outreach</a></li>
       <li><a href="contact.html">Contact</a></li>
@@ -27,9 +27,9 @@
 <h1>Welcome</h1>
 <p>Welcome to my website. I’m Urja Zaveri, a PhD candidate at ETH Zurich.</p>
 
-<p>My research focuses on how planets form, what they are made of, and how their interiors evolve. I am particularly interested in rocky exoplanets and planetary systems that form under reducing chemical conditions.</p>
+<p>My research focuses on how planets form, what they are made of, and how their interiors evolve. I am particularly interested in rocky exoplanets and planetary systems that form under reducing chemical conditions. My work ranges from thermodynamic and interior modelling to conducting high-pressure temperature experiments.</p>
 
-<p>Alongside research, I am passionate about science outreach and public engagement. I enjoy translating complex scientific ideas into accessible stories and creating spaces where science feels curious, welcoming, and fun.</p>
+<p>Alongside research, I am passionate about science outreach and public engagement. I really enjoy translating complex scientific ideas into accessible stories and creating spaces where science feels curious and fun.</p>
 
 </section>
 </main>
