--- a/index.html
+++ b/index.html
@@ -25,9 +25,10 @@
 <section>
 
 <h1>Welcome</h1>
-<p>Welcome to my website. I’m Urja Zaveri, a PhD candidate at ETH Zurich.</p>
+<p>Welcome to my website. I’m a PhD candidate at <a href="https://planetology.ethz.ch/" target="_blank" rel="noopener noreferrer">
+Experimental Planetology Group</a> in ETH Zürich. </p>
 
-<p>My research focuses on how planets form, what they are made of, and how their interiors evolve. I am particularly interested in rocky exoplanets and planetary systems that form under reducing chemical conditions. My work ranges from thermodynamic and interior modelling to conducting high-pressure temperature experiments.</p>
+<p>My research focuses on how planets form, what they are made of, and how their interiors evolve. I am particularly interested in rocky exoplanets and planetary systems that form under reducing chemical conditions. </p>
 
 <p>Alongside research, I am passionate about science outreach and public engagement. I really enjoy translating complex scientific ideas into accessible stories and creating spaces where science feels curious and fun.</p>
 
