--- a/index.html
+++ b/index.html
@@ -22,17 +22,27 @@
 </nav>
 
 <main>
-<section>
+<div class="home-layout">
 
-<h1>Welcome</h1>
-<p>Welcome to my website. I’m a PhD candidate at <a href="https://planetology.ethz.ch/" target="_blank" rel="noopener noreferrer">
-Experimental Planetology Group</a> in ETH Zürich. </p>
+  <img 
+    src="images/profile.jpg" 
+    alt="Portrait of Urja Zaveri"
+    class="profile-img"
+  >
 
-<p>My research focuses on how planets form, what they are made of, and how their interiors evolve. I am particularly interested in rocky exoplanets and planetary systems that form under reducing chemical conditions. </p>
+  <div>
+    <h1>Welcome</h1>
 
-<p>Alongside research, I am passionate about science outreach and public engagement. I really enjoy translating complex scientific ideas into accessible stories and creating spaces where science feels curious and fun.</p>
+    <p>Welcome to my website. I’m a PhD candidate at 
+    <a href="https://planetology.ethz.ch/" target="_blank" rel="noopener noreferrer">
+    Experimental Planetology Group</a> in ETH Zürich.</p>
 
-</section>
+    <p>My research focuses on how planets form, what they are made of, and how their interiors evolve. I am particularly interested in rocky exoplanets and planetary systems that form under reducing chemical conditions.</p>
+
+    <p>Alongside research, I am passionate about science outreach and public engagement. I really enjoy translating complex scientific ideas into accessible stories and creating spaces where science feels curious and fun.</p>
+  </div>
+
+</div>
 </main>
 <footer>© Urja Zaveri</footer>
 <script src="script.js"></script>
