--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 </nav>
 
 <main>
-<div class="home-layout">
+<section class="home-layout">
 
   <img 
-    src="images/profile.jpg" 
+    src="images/profile.jpg"
     alt="Portrait of Urja Zaveri"
     class="profile-img"
   >
@@ -33,14 +33,29 @@
   <div>
     <h1>Welcome</h1>
 
-    <p>Welcome to my website. I’m a PhD candidate at 
-    <a href="https://planetology.ethz.ch/" target="_blank" rel="noopener noreferrer">
-    Experimental Planetology Group</a> in ETH Zürich.</p>
+    <p>
+      I’m a PhD candidate at 
+      <a href="https://planetology.ethz.ch/" target="_blank" rel="noopener noreferrer">
+        Experimental Planetology Group
+      </a>
+      in ETH Zürich.
+    </p>
 
-    <p>My research focuses on how planets form, what they are made of, and how their interiors evolve. I am particularly interested in rocky exoplanets and planetary systems that form under reducing chemical conditions.</p>
+    <p>
+      My research focuses on how planets form, what they are made of, and how their interiors evolve.
+      I am particularly interested in rocky exoplanets and planetary systems that form under reducing
+      chemical conditions.
+    </p>
 
-    <p>Alongside research, I am passionate about science outreach and public engagement. I really enjoy translating complex scientific ideas into accessible stories and creating spaces where science feels curious and fun.</p>
+    <p>
+      Alongside research, I am passionate about science outreach and public engagement.
+      I really enjoy translating complex scientific ideas into accessible stories and creating
+      spaces where science feels curious and fun.
+    </p>
   </div>
+
+</section>
+
 
 </div>
 </main>
