--- a/outreach.html
+++ b/outreach.html
@@ -13,7 +13,7 @@
     <div class="nav-logo">Urja Zaveri</div>
     <ul class="nav-links">
       <li><a href="index.html">Home</a></li>
-      <li><a href="about.html">About</a></li>
+      <li><a href="about.html">About Me</a></li>
       <li><a href="research.html">Research</a></li>
       <li><a href="outreach.html">Outreach</a></li>
       <li><a href="contact.html">Contact</a></li>
