--- a/about.html
+++ b/about.html
@@ -18,6 +18,7 @@
       <li><a href="outreach.html">Outreach</a></li>
       <li><a href="contact.html">Contact</a></li>
     </ul>
+    <button id="theme-toggle">🌙</button>
   </div>
 </nav>
 
