--- a/outreach.html
+++ b/outreach.html
@@ -17,6 +17,7 @@
       <li><a href="research.html">Research</a></li>
       <li><a href="outreach.html">Outreach</a></li>
       <li><a href="contact.html">Contact</a></li>
+      <button id="theme-toggle">🌙</button>
     </ul>
   </div>
 </nav>
