--- a/outreach.html
+++ b/outreach.html
@@ -26,6 +26,27 @@
 <section>
 
 <h1>Outreach</h1>
+
+<div class="carousel">
+
+  <div class="carousel-track">
+    <img
+      src="images/AoT.jpg"
+      alt="Astronomy on Tap Zurich outreach team"
+      class="carousel-slide"
+    >
+    <img
+      src="images/St.Xaviers%20Talk.jpg"
+      alt="Invited outreach talk at St. Xavier’s College, Mumbai"
+      class="carousel-slide"
+    >
+  </div>
+
+  <button class="carousel-btn prev" aria-label="Previous image">‹</button>
+  <button class="carousel-btn next" aria-label="Next image">›</button>
+
+</div>
+
 <p>I am actively engaged in science outreach and communication, with a focus on making planetary science accessible to non-specialist audiences. Alongside my core interest in space science, I enjoy engaging with adjacent topics such as gemmology and environmental science, as well as broader themes in general science.</p>
 
 <h2>Selected Outreach Activities</h2>
