--- a/research.html
+++ b/research.html
@@ -8,19 +8,7 @@
 </head>
 <body>
 
-<nav>
-  <div class="nav-container">
-    <div class="nav-logo">Urja Zaveri</div>
-    <ul class="nav-links">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="about.html">About Me</a></li>
-      <li><a href="research.html">Research</a></li>
-      <li><a href="outreach.html">Outreach</a></li>
-      <li><a href="contact.html">Contact</a></li>
-    </ul>
-    <button id="theme-toggle">🌙</button>
-  </div>
-</nav>
+<div id="nav-placeholder"></div>
 
 <main>
 <section>
